--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -275,11 +275,12 @@
 	<string name="l3_dbservice_download_start">正在取得預載資料庫, 這一個動作會持續一至數分鐘，請您耐心等候.</string>
     <string name="l3_dbservice_download_initial">正在初始化資料庫.</string>
     <string name="l3_dbservice_download_loaded">預載資料庫已成功載入.</string>
-    <string name="l3_dbservice_download_convert">輸入法進行轉換中.</string>
+    <string name="l3_dbservice_download_convert">輸入法進行轉換中...</string>
     
     <string name="l3_message_database_reset_confirm">您是否要移除資料庫?</string>
     <string name="l3_message_table_reset_confirm">您是否要清除所有記錄?</string>
     <string name="l3_initial_download_database">下載資料庫</string>
+    <string name="l3_initial_download_failed">資料轉換錯誤, 請重置資料庫再重新下載!</string>
     <string name="l3_initial_backup_database">備份資料庫</string>
     <string name="l3_initial_backup_start">開始備份資料庫</string>
     <string name="l3_initial_backup_end">資料庫備份完成</string>
