--- a/LIME/res/values-zh-rCN/strings.xml
+++ b/LIME/res/values-zh-rCN/strings.xml
@@ -258,9 +258,9 @@
     <string name="l3_tab_initial">初始资料库</string>
     <string name="l3_tab_initial_error">下载失败，请确认装置已连上网路.</string>
     <string name="l3_tab_initial_message">请点选 [预载数据库] 键下载 LIME 数据库或点选 [还原数据库] 键由备份档案中还原</string>
-    <string name="l3_initial_btn_load_empty_db">空白资料库</string>
-    <string name="l3_initial_btn_load_preload_db">预载资料库</string>
-    <string name="l3_initial_btn_reset_db">重置资料库</string>
+    <string name="l3_initial_btn_load_empty_db">空白数据库</string>
+    <string name="l3_initial_btn_load_preload_db">预载数据库</string>
+    <string name="l3_initial_btn_reset_db">重置数据库</string>
     
     <string name="l3_tab_manage">输入法管理</string>
     <string name="l3_manage_default">预设</string>
@@ -273,17 +273,18 @@
     
     <string name="l3_tab_preference">喜好设定</string>
     
-	<string name="l3_dbservice_download_start">正在取得预载资料库, 这一个动作会持续一至数分钟，请您耐心等候.</string>
-    <string name="l3_dbservice_download_initial">正在初始化资料库.</string>
-    <string name="l3_dbservice_download_loaded">预载资料库已成功载入.</string>
+	<string name="l3_dbservice_download_start">正在取得预载数据库, 这一个动作会持续一至数分钟，请您耐心等候.</string>
+	<string name="l3_dbservice_download_start_empty">正在取得白空数据库, 这一个动作会持续一至数分钟，请您耐心等候.</string>
+    <string name="l3_dbservice_download_initial">正在初始化数据库.</string>
+    <string name="l3_dbservice_download_loaded">数据库已成功载入.</string>
     <string name="l3_dbservice_download_convert">输入法进行转换中.</string>
     
-    <string name="l3_message_database_reset_confirm">您是否要移除资料库?</string>
+    <string name="l3_message_database_reset_confirm">您是否要移除数据库?</string>
     <string name="l3_message_table_reset_confirm">您是否要清除所有记录?</string>
-    <string name="l3_initial_download_database">下载资料库</string>
-    <string name="l3_initial_download_failed">资料转换错误, 请重置资料库再重新下载!</string>
-    <string name="l3_initial_backup_database">备份资料库</string>
-    <string name="l3_initial_backup_start">开始备份资料库</string>
+    <string name="l3_initial_download_database">下载数据库</string>
+    <string name="l3_initial_download_failed">资料转换错误, 请重置数据库再重新下载!</string>
+    <string name="l3_initial_backup_database">备份数据库</string>
+    <string name="l3_initial_backup_start">开始备份数据库</string>
     <string name="l3_initial_backup_end">数据库备份完成</string>
     <string name="l3_initial_backup_confirm">您是否要备份数据库?</string>
     <string name="l3_initial_backup_error">数据库不存在，无法进行备份.</string>
