--- a/trunk/LIME/res/values-zh-rTW/strings.xml
+++ b/trunk/LIME/res/values-zh-rTW/strings.xml
@@ -62,7 +62,7 @@
     
     <string name="im">輸入法</string>
     <string name="im_reverse_lookup_list">輸入法字根反查</string>
-    <string name="default_reverse_lookup_list">自定義字根反查</string>
+    <string name="default_reverse_lookup_list">自建字根反查</string>
     <string name="cj_reverse_lookup_list">倉頡字根反查</string>
     <string name="scj_reverse_lookup_list">快倉字根反查</string>
     <string name="dayi_reverse_lookup_list">大易字根反查</string>
@@ -78,7 +78,7 @@
     <string name="vibrate_on_keypress">打字震動</string>
     <string name="sound_on_keypress">打字音效</string>
     <string name="display_number_keypads">顯示數字鍵盤</string>
-    <string name="display_number_keypads_summary">顯示數字按鈕於預設鍵盤上</string>
+    <string name="display_number_keypads_summary">顯示數字按鈕於鍵盤上</string>
     <string name="similiar_enable_switch">啟用關聯字典</string>
     <string name="similiar_enable_switch_summary">啟用關聯字典功能</string>
     <string name="candidate_switch">滑動選取</string>
@@ -172,7 +172,7 @@
     <!-- IM Reverse Lookup List -->  
     <string-array name="im_reverse_lookup">
 		<item>無</item>
-		<item>預設</item>
+		<item>自建</item>
 		<item>倉頡</item>
 		<item>快倉</item>
 		<item>大易</item>
@@ -192,7 +192,7 @@
 	--></string-array>
     <!-- Keyboard Selection List -->
     <string-array name="keyboard">
-		<item>預設鍵盤</item>
+		<item>自建鍵盤</item>
 		<item>電話鍵盤</item>
 		<item>倉頡鍵盤</item>
 		<item>快倉鍵盤</item>
@@ -244,7 +244,7 @@
 	
 	<!-- Table Selection list -->
 	<string-array name="table">
-		<item>預設/電話</item>
+		<item>自建/電話</item>
 		<item>倉頡</item>
 		<item>快倉</item>
 		<item>大易</item>
@@ -266,7 +266,7 @@
     <string name="l3_initial_btn_reset_db">重置資料庫</string>
     
     <string name="l3_tab_manage">輸入法管理</string>
-    <string name="l3_manage_default">預設</string>
+    <string name="l3_manage_default">自建</string>
     <string name="l3_manage_phonetic">注音</string>
     <string name="l3_manage_cj">倉頡</string>
     <string name="l3_manage_scj">快倉</string>
