Fixed "Starting in english" capital character display problem.

--- a/LIME/res/values-zh-rCN/strings.xml
+++ b/LIME/res/values-zh-rCN/strings.xml
@@ -192,7 +192,7 @@
 	--></string-array>
     <!-- Keyboard Selection List -->
     <string-array name="keyboard">
-		<item>自建键盘</item>
+		<item>预设键盘</item>
 		<item>电话键盘</item>
 		<item>仓颉键盘</item>
 		<item>快仓键盘</item>
