--- a/trunk/LIME/res/values-zh-rTW/strings.xml
+++ b/trunk/LIME/res/values-zh-rTW/strings.xml
@@ -192,7 +192,7 @@
 	--></string-array>
     <!-- Keyboard Selection List -->
     <string-array name="keyboard">
-		<item>自建鍵盤</item>
+		<item>預設鍵盤</item>
 		<item>電話鍵盤</item>
 		<item>倉頡鍵盤</item>
 		<item>快倉鍵盤</item>
